[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/views/loginView.gd" type="Script" id=1]
[ext_resource path="res://sprites/placeholder_city.jpg" type="Texture" id=2]
[ext_resource path="res://resources/theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/views/login_subviews/emailSubview.gd" type="Script" id=4]
[ext_resource path="res://scripts/EmailField.gd" type="Script" id=5]
[ext_resource path="res://scripts/views/login_subviews/signinSubview.gd" type="Script" id=6]
[ext_resource path="res://scripts/PasswField.gd" type="Script" id=7]
[ext_resource path="res://resources/gui/TextEdit_Normal.tres" type="StyleBox" id=8]
[ext_resource path="res://scripts/views/login_subviews/passwSubview.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 2
border_color = Color( 0.517647, 0.729412, 0.898039, 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_accept"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 2
border_color = Color( 0.517647, 0.729412, 0.898039, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 4
border_color = Color( 0.517647, 0.729412, 0.898039, 1 )

[node name="loginView" type="Control"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="city" type="Sprite" parent="."]
scale = Vector2( 2.73, 2.73 )
z_index = 1
texture = ExtResource( 2 )
centered = false

[node name="emailSubview" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_top = 435.0
margin_right = 720.0
margin_bottom = 635.0
rect_min_size = Vector2( 720, 200 )
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="emailField" type="LineEdit" parent="emailSubview"]
margin_left = 10.0
margin_top = 20.0
margin_right = 710.0
margin_bottom = 68.0
custom_styles/focus = SubResource( 1 )
placeholder_text = "EMAIL_KS"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 5 )

[node name="button" type="Button" parent="emailSubview"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = 125.0
margin_right = 135.0
margin_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "CONTINUE_KS"

[node name="signinSubview" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
script = ExtResource( 6 )
id = 1

[node name="emailLabel" type="Label" parent="signinSubview"]
margin_left = 10.0
margin_top = 455.0
margin_right = 710.0
margin_bottom = 503.0
text = "someone@example.com"

[node name="first_name" type="LineEdit" parent="signinSubview"]
margin_left = 10.0
margin_top = 530.0
margin_right = 710.0
margin_bottom = 578.0
placeholder_text = "NAME_KS"
caret_blink = true
caret_blink_speed = 0.5

[node name="surname" type="LineEdit" parent="signinSubview"]
margin_left = 10.0
margin_top = 610.0
margin_right = 710.0
margin_bottom = 658.0
rect_min_size = Vector2( 700, 0 )
placeholder_text = "SURNAME_KS"
caret_blink = true
caret_blink_speed = 0.5

[node name="passw" type="LineEdit" parent="signinSubview"]
margin_left = 10.0
margin_top = 690.0
margin_right = 710.0
margin_bottom = 738.0
custom_styles/focus = SubResource( 4 )
secret = true
placeholder_text = "PASSW_KS"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 7 )
min_size = 5

[node name="re_passw" type="LineEdit" parent="signinSubview"]
margin_left = 10.0
margin_top = 770.0
margin_right = 710.0
margin_bottom = 818.0
custom_styles/focus = SubResource( 5 )
custom_styles/normal = ExtResource( 8 )
secret = true
placeholder_text = "REPASSW_KS"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 7 )
min_size = 5
passw_equals = NodePath("../passw")

[node name="button" type="Button" parent="signinSubview"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 205.0
margin_top = 950.0
margin_right = 475.0
margin_bottom = 1030.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "CONTINUE_KS"

[node name="passwSubview" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_top = 435.0
margin_right = 720.0
margin_bottom = 635.0
rect_min_size = Vector2( 720, 200 )
theme = ExtResource( 3 )
script = ExtResource( 9 )
id = 2

[node name="emailLabel" type="Label" parent="passwSubview"]
margin_left = 10.0
margin_top = 20.0
margin_right = 710.0
margin_bottom = 68.0
text = "someone@example.com"

[node name="passwField" type="LineEdit" parent="passwSubview"]
margin_left = 10.0
margin_top = 90.0
margin_right = 710.0
margin_bottom = 138.0
secret = true
placeholder_text = "PASSW_KS"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 7 )
min_size = 5

[node name="button" type="Button" parent="passwSubview"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = 125.0
margin_right = 135.0
margin_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "CONTINUE_KS"
[connection signal="pressed" from="emailSubview/button" to="emailSubview" method="_on_button_pressed"]
[connection signal="pressed" from="signinSubview/button" to="signinSubview" method="_on_button_pressed"]
[connection signal="pressed" from="passwSubview/button" to="passwSubview" method="_on_button_pressed"]
